--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -41,7 +41,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminData.cs" />
+    <Compile Include="AppointmentData.cs" />
+    <Compile Include="MedicalData.cs" />
+    <Compile Include="PatientData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryData.cs" />
+    <Compile Include="StateData.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DB\DB.csproj">
+      <Project>{4952dd35-179d-476e-80b2-2dbd74a5ac73}</Project>
+      <Name>DB</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DomainModel\DomainModel.csproj">
+      <Project>{b3804bce-7979-4840-a7d9-e827ffe28d2a}</Project>
+      <Name>DomainModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
