BtnGO-OnclickEvent-completed

--- a/MedicalSystem_WebProyect/MedicalSystem_WebProyect.csproj
+++ b/MedicalSystem_WebProyect/MedicalSystem_WebProyect.csproj
@@ -106,6 +106,16 @@
     <Folder Include="ClientViews\" />
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataModel\DataModel.csproj">
+      <Project>{68f50df1-4aab-4840-9d5a-74be8165a51b}</Project>
+      <Name>DataModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DomainModel\DomainModel.csproj">
+      <Project>{b3804bce-7979-4840-a7d9-e827ffe28d2a}</Project>
+      <Name>DomainModel</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
