GridviewSelector-adm-completed

--- a/MedicalSystem_WebProyect/MedicalSystem_WebProyect.csproj
+++ b/MedicalSystem_WebProyect/MedicalSystem_WebProyect.csproj
@@ -70,6 +70,7 @@
     <Content Include="AdminViews\FrmAdminLogin.aspx" />
     <Content Include="AdminViews\FrmAdminMain.aspx" />
     <Content Include="AdminViews\FrmGridView.aspx" />
+    <Content Include="AdminViews\FrmRegisterFromAdmin.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -94,6 +95,13 @@
     </Compile>
     <Compile Include="AdminViews\FrmGridView.aspx.designer.cs">
       <DependentUpon>FrmGridView.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AdminViews\FrmRegisterFromAdmin.aspx.cs">
+      <DependentUpon>FrmRegisterFromAdmin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AdminViews\FrmRegisterFromAdmin.aspx.designer.cs">
+      <DependentUpon>FrmRegisterFromAdmin.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
