frmUserConfirg-controlls-created

--- a/MedicalSystem_WebProyect/MedicalSystem_WebProyect.csproj
+++ b/MedicalSystem_WebProyect/MedicalSystem_WebProyect.csproj
@@ -75,6 +75,7 @@
     <Content Include="ClientViews\FrmClientLogin.aspx" />
     <Content Include="ClientViews\FrmClientMain.aspx" />
     <Content Include="ClientViews\FrmGvData.aspx" />
+    <Content Include="ClientViews\FrmUserConfig.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -134,6 +135,13 @@
     </Compile>
     <Compile Include="ClientViews\FrmGvData.aspx.designer.cs">
       <DependentUpon>FrmGvData.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ClientViews\FrmUserConfig.aspx.cs">
+      <DependentUpon>FrmUserConfig.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ClientViews\FrmUserConfig.aspx.designer.cs">
+      <DependentUpon>FrmUserConfig.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
